# safe-rm

./: CHANGELOG.md  Makefile  README.md  cabal.project  del.cabal  flake.nix  hie.yaml  safe-rm.cabal  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml
.github/workflows/: cabal.yaml  stack.yaml  style.yaml
app/: Args.hs  Main.hs
benchmarks/: Main.hs  bench.csv
benchmarks/Benchmarks/: Prelude.hs  ReadIndex.hs
docs/: SafeRm-Data-Index.html  SafeRm-Data-Metadata.html  SafeRm-Data-PathData.html  SafeRm-Data-PathType.html  SafeRm-Data-Paths.html  SafeRm-Data-UniqueSeq.html  SafeRm-Effects-MonadCallStack.html  SafeRm-Effects-MonadFsReader.html  SafeRm-Effects-MonadFsWriter.html  SafeRm-Effects-MonadLoggerContext.html  SafeRm-Effects-MonadSystemTime.html  SafeRm-Effects-MonadTerminal.html  SafeRm-Env.html  SafeRm-Exception.html  SafeRm-Runner-Args.html  SafeRm-Runner-Command.html  SafeRm-Runner-Env.html  SafeRm-Runner-SafeRmT.html  SafeRm-Runner-Toml.html  SafeRm-Runner.html  SafeRm-Utils.html  SafeRm.html  doc-index-124.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  (+24 more)
docs/src/: SafeRm.Data.Index.html  SafeRm.Data.Metadata.html  SafeRm.Data.PathData.html  SafeRm.Data.PathType.html  SafeRm.Data.Paths.html  SafeRm.Data.UniqueSeq.html  SafeRm.Effects.MonadCallStack.html  SafeRm.Effects.MonadFsReader.html  SafeRm.Effects.MonadFsWriter.html  SafeRm.Effects.MonadLoggerContext.html  SafeRm.Effects.MonadSystemTime.html  SafeRm.Effects.MonadTerminal.html  SafeRm.Env.html  SafeRm.Exception.html  SafeRm.Prelude.html  SafeRm.Runner.Args.html  SafeRm.Runner.Command.html  SafeRm.Runner.Env.html  SafeRm.Runner.SafeRmT.html  SafeRm.Runner.Toml.html  SafeRm.Runner.html  SafeRm.Utils.html  SafeRm.html
examples/: config.toml
exe-internal/Del/: Args.hs  Runner.hs
exe-internal/SafeRm/: Args.hs  Runner.hs  Toml.hs
lib/exe-internal/SafeRm/: Args.hs  Runner.hs
lib/file-utils/SafeRm/: FileUtils.hs
lib/max-runs/SafeRm/: MaxRuns.hs
lib/runner/SafeRm/: Runner.hs
lib/runner/SafeRm/Runner/: Args.hs  Command.hs  SafeRmT.hs  Toml.hs
nix/: stack.nix
src/: Del.hs  SafeRm.hs
src/Del/: Exceptions.hs  Internal.hs  Prelude.hs  Types.hs  Utils.hs
src/Del/Data/: Index.hs  Metadata.hs  PathData.hs  PathType.hs  Paths.hs  Statistics.hs  Timestamp.hs
src/SafeRm/: Env.hs  Exception.hs  Exceptions.hs  Prelude.hs  Runner.hs  Utils.hs
src/SafeRm/Data/: Index.hs  Metadata.hs  PathData.hs  PathType.hs  Paths.hs  Timestamp.hs  UniqueSeq.hs
src/SafeRm/Effects/: FileSystemReader.hs  FileSystemWriter.hs  Logger.hs  MonadCallStack.hs  MonadFsReader.hs  MonadFsWriter.hs  MonadLoggerContext.hs  MonadSystemTime.hs  MonadTerminal.hs  Terminal.hs  Timing.hs
src/SafeRm/Effects/Logger/: Format.hs  Types.hs
src/SafeRm/Runner/: Args.hs  Command.hs  Config.hs  Env.hs  SafeRmT.hs  Toml.hs
test/config/: Main.hs
test/config/Config/: Args.hs  Prelude.hs  Toml.hs
test/functional/: Main.hs
test/functional/Functional/: Logging.hs  Prelude.hs  TestArgs.hs
test/functional/Functional/Commands/: D.hs  E.hs  L.hs  M.hs  R.hs  X.hs
test/functional/Functional/Commands/D/: duplicate.golden  many.golden  no-trace.golden  single.golden  some.golden  unknown.golden
test/functional/Functional/Commands/E/: empties.golden  empty.golden  index-entry-error.golden  no-force.golden  read-error.golden  twice.golden
test/functional/Functional/Commands/L/: duplicate-error.golden  empty.golden  index-entry-error.golden  index-size-error.golden  no-trace.golden  read-error.golden
test/functional/Functional/Commands/M/: empty.golden  metadata.golden
test/functional/Functional/Commands/R/: collision.golden  many.golden  no-trace.golden  single.golden  some.golden  unknown.golden
test/functional/Functional/Commands/X/: many.golden  no-force.golden  no-trace.golden  single.golden  some.golden  unknown.golden
test/functional/Functional/Logging/: log-metadata-excluded.golden  logs.golden
test/integration/: Main.hs
test/integration/Integration/: MaxRuns.hs  Prelude.hs  SafeRm.hs
test/unit/: Main.hs  config.toml
test/unit/Unit/: MaxRuns.hs  Prelude.hs  Runner.hs  SafeRm.hs
test/unit/Unit/Data/: Index.hs  UniqueSeq.hs
test/unit/Unit/Data/Index/: multi-name-asc.golden  multi-name-desc.golden  multi-size-asc.golden  multi-size-desc.golden  single-name-asc.golden  single-name-desc.golden  single-size-asc.golden  single-size-desc.golden
