cabal-version:      2.4
name:               del
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.3
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/del/
bug-reports:        https://github.com/tbidne/del/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/del

common common-exts
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    NoFieldSelectors

library
  import:           common-exts
  exposed-modules:
    Del
    Del.Exceptions
    Del.Internal
    Del.Types

  build-depends:
    , base                  >=4.14.0.0  && <4.17
    , byte-types            ^>=0.1
    , bytestring            >=0.10.10.0 && <0.12
    , cassava               ^>=0.5
    , deepseq               ^>=1.4.4.0
    , directory             ^>=1.3.5.0
    , filepath              ^>=1.4.2.1
    , hashable              >=1.3.0.0   && <1.5
    , optics-core           ^>=0.4
    , prettyprinter         >=1.4.0     && <1.8
    , text                  >=1.2.3.2   && <2.1
    , unordered-containers  ^>=0.2
    , vector                >=0.12.1.2  && <0.14

  hs-source-dirs:   src
  default-language: Haskell2010

library del-exe-internal
  import:           common-exts
  exposed-modules:
    Del.Args
    Del.Runner

  build-depends:
    , base
    , del
    , gitrev                >=1.2.0   && <1.4
    , hashable
    , optparse-applicative  >=0.15    && <0.18
    , optics-core
    , package-version       >=0.1.0.0 && <0.4
    , prettyprinter
    , text
    , unordered-containers

  hs-source-dirs:   exe-internal
  default-language: Haskell2010

executable del
  import:           common-exts
  main-is:          Main.hs
  build-depends:
    , base
    , del-exe-internal

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
