cabal-version:      2.4
name:               del
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.4
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/del/
bug-reports:        https://github.com/tbidne/del/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/del

common common-exts
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    TypeFamilies
    NoFieldSelectors

library
  import:           common-exts
  exposed-modules:
    Del
    Del.Data.Index
    Del.Data.Metadata
    Del.Data.PathData
    Del.Data.Paths
    Del.Data.PathType
    Del.Data.Timestamp
    Del.Exceptions
    Del.Prelude
    Del.Utils

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.14.0.0  && <4.17
    , byte-types            ^>=0.1
    , bytestring            >=0.10.10.0 && <0.12
    , cassava               ^>=0.5
    , deepseq               ^>=1.4.4.0
    , directory             ^>=1.3.5.0
    , filepath              ^>=1.4.2.1
    , hashable              >=1.3.0.0   && <1.5
    , optics-core           ^>=0.4
    , prettyprinter         ^>=1.7.1
    , text                  >=1.2.3.2   && <2.1
    , time                  >=1.9.3     && <1.14
    , unordered-containers  ^>=0.2
    , vector                >=0.12.1.2  && <0.14

  hs-source-dirs:   src
  default-language: GHC2021

library del-exe-internal
  import:           common-exts
  exposed-modules:
    Del.Args
    Del.Runner

  build-depends:
    , base
    , del
    , gitrev                >=1.2.0   && <1.4
    , optparse-applicative  >=0.15    && <0.18
    , package-version       >=0.1.0.0 && <0.4
    , text
    , unordered-containers

  hs-source-dirs:   exe-internal
  default-language: GHC2021

executable del
  import:             common-exts
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , del-exe-internal

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   GHC2021

test-suite functional
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Commands.D
    Functional.Commands.E
    Functional.Commands.L
    Functional.Commands.M
    Functional.Commands.R
    Functional.Commands.X
    Functional.Prelude
    Functional.TestArgs

  build-depends:
    , base
    , bytestring
    , del
    , del-exe-internal
    , directory
    , env-guard         ^>=0.2
    , tasty             >=1.1.0.3 && <1.5
    , tasty-hunit       >=0.9     && <0.11
    , text

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Benchmarks.Prelude
    Benchmarks.ReadIndex

  build-depends:
    , base
    , bytestring
    , del
    , directory
    , env-guard
    , tasty-bench  ^>=0.3

  ghc-options:      -Wno-unused-packages
  hs-source-dirs:   benchmarks
  default-language: GHC2021
