cabal-version:      2.4
name:               safe-rm
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.4
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/safe-rm/
bug-reports:        https://github.com/tbidne/safe-rm/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/safe-rm

common common-exts
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    TypeFamilies
    NoFieldSelectors

library
  import:           common-exts
  exposed-modules:
    SafeRm
    SafeRm.Data.Index
    SafeRm.Data.Metadata
    SafeRm.Data.PathData
    SafeRm.Data.Paths
    SafeRm.Data.PathType
    SafeRm.Effects.Logger
    SafeRm.Effects.Terminal
    SafeRm.Effects.Timing
    SafeRm.Env
    SafeRm.Exceptions
    SafeRm.Prelude
    SafeRm.Runner
    SafeRm.Runner.Args
    SafeRm.Runner.Command
    SafeRm.Runner.Env
    SafeRm.Runner.SafeRmT
    SafeRm.Runner.Toml
    SafeRm.Utils

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  ^>=4.16.0.0
    , byte-types            ^>=0.1
    , bytestring            ^>=0.11.1.0
    , cassava               ^>=0.5.2.0
    , containers            ^>=0.6.3.1
    , deepseq               ^>=1.4.6.0
    , fast-logger           >=2.1      && <3.2
    , filepath              ^>=1.4.2.1
    , gitrev                >=1.2.0    && <1.4
    , hashable              ^>=1.4.0.2
    , monad-logger          ^>=0.3.30
    , mtl                   >=2.2.1    && <2.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.15     && <0.18
    , package-version       >=0.1.0.0  && <0.4
    , prettyprinter         ^>=1.7.1
    , template-haskell      >=2.18.0.0 && <2.20
    , text                  >=1.2.4.0  && <2.1
    , time                  >=1.9.3    && <1.14
    , time-compat           ^>=1.9.6.1
    , toml-reader           ^>=0.1.0.0
    , unliftio              ^>=0.2.22.0
    , unordered-containers  ^>=0.2.14.0
    , vector                >=0.12.3.0 && <0.14

  hs-source-dirs:   src
  default-language: GHC2021

library file-utils
  import:           common-exts
  exposed-modules:  SafeRm.FileUtils
  build-depends:
    , base
    , bytestring
    , safe-rm
    , text
    , unliftio

  hs-source-dirs:   lib/file-utils
  default-language: GHC2021

executable sr
  import:             common-exts
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , safe-rm

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   GHC2021

test-suite config
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Config.Args
    Config.Prelude
    Config.Toml

  build-depends:
    , base
    , safe-rm
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hunit           >=0.9     && <0.11
    , unliftio
    , unordered-containers

  hs-source-dirs:   test/config
  default-language: GHC2021

test-suite integration
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.MaxRuns
    Integration.Prelude
    Integration.SafeRm

  build-depends:
    , base
    , env-guard             ^>=0.2
    , file-utils
    , hedgehog              >=1.0.2   && <1.3
    , safe-rm
    , tagged                ^>=0.8.6
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hedgehog        >=1.2.0.0 && <1.4
    , unliftio
    , unordered-containers

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Commands.D
    Functional.Commands.E
    Functional.Commands.L
    Functional.Commands.M
    Functional.Commands.R
    Functional.Commands.X
    Functional.Prelude

  build-depends:
    , base
    , bytestring
    , env-guard    ^>=0.2
    , file-utils
    , safe-rm
    , tasty
    , tasty-hunit
    , text
    , time
    , unliftio

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Benchmarks.Prelude
    Benchmarks.ReadIndex

  build-depends:
    , base
    , bytestring
    , env-guard
    , safe-rm
    , tasty-bench  ^>=0.3
    , unliftio

  ghc-options:      -Wno-unused-packages
  hs-source-dirs:   benchmarks
  default-language: GHC2021
